# aplikasi_keuangan_mhs_ddp_b11

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: main.c.9492339196944362.idx  modul_1.c.8419A1176AF5ECF7.idx  modul_1.h.DC0C4E1FE4D2ED7B.idx  modul_2.c.80AE7EA219AB09D8.idx  modul_3.c.68A40C1DDC1E1AB9.idx  modul_4.c.3D3A4C7A811D8C16.idx  modul_5.c.082BA890F9F5DADF.idx  modul_6.c.609EFA4D1D1BED82.idx
data/: data_keuangan.txt  pos_anggaran_masuk.txt
include/: modul_1.h  modul_6.h
src/: main.c  modul_1.c  modul_6.c
